# lvgl-rust

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/esp32/: Cargo.toml  README.md  build.rs  partitions.csv  sdkconfig.defaults
examples/esp32/.cargo/: config.toml
examples/esp32/src/: main.rs
examples/esp32/src/drivers/: cst816.rs  ili9341.rs  mod.rs  st7789.rs
examples/simulator/: Cargo.toml  README.md
examples/simulator/src/: main.rs  simulator_display.rs
lvgl-sys/: Cargo.toml  build.rs  lv_conf.h  lv_conf_simulator.h  wrapper.h
lvgl-sys/src/: lib.rs
src/: display.rs  input.rs  lib.rs  obj.rs  style.rs  widgets.rs
