[package]
name = "lvgl-esp32-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lvgl = { path = "../..", features = ["std"] }
esp-idf-svc = { version = "0.51", features = ["native", "std"] }
esp-idf-hal = { version = "0.45", features = ["std"] }
esp-idf-sys = { version = "0.36", features = ["binstart"] }
log = "0.4"

[build-dependencies]
embuild = "0.33"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[profile.dev]
debug = true
opt-level = "z"
